FIX: tab header

--- a/frontend/pages/branch/activity.html
+++ b/frontend/pages/branch/activity.html
@@ -107,6 +107,62 @@
                         <td>$89</td>
                         <td>Pending</td>
                       </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
@@ -155,6 +211,62 @@
                     </thead>
 
                     <tbody>
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
                       <tr>
                         <td>2025-02-14</td>
                         <td>John Doe</td>
@@ -229,6 +341,62 @@
                         <td>$89</td>
                         <td>Pending</td>
                       </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
@@ -277,6 +445,62 @@
                     </thead>
 
                     <tbody>
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
                       <tr>
                         <td>2025-02-14</td>
                         <td>John Doe</td>
@@ -351,6 +575,62 @@
                         <td>$89</td>
                         <td>Pending</td>
                       </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
@@ -399,6 +679,62 @@
                     </thead>
 
                     <tbody>
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-14</td>
+                        <td>John Doe</td>
+                        <td>$120</td>
+                        <td>Completed</td>
+                      </tr>
+
+                      <tr>
+                        <td>2025-02-15</td>
+                        <td>Jane Doe</td>
+                        <td>$89</td>
+                        <td>Pending</td>
+                      </tr>
+
                       <tr>
                         <td>2025-02-14</td>
                         <td>John Doe</td>
