FIX: activity page

--- a/frontend/pages/branch/activity.html
+++ b/frontend/pages/branch/activity.html
@@ -19,15 +19,6 @@
             >
           </h1>
         </div>
-        <div class="actions right">
-          <button
-            class="btn btn-primary layer-open"
-            data-layer-target="add-item"
-          >
-            <span class="btn-label">Add Item</span>
-            <i class="bx bxs-user-plus btn-icon"></i>
-          </button>
-        </div>
       </header>
 
       <main class="main-container main-scrollable">
@@ -74,6 +65,11 @@
                         <option value="amount">Amount</option>
                       </select>
                     </div>
+
+                    <button class="btn btn-secondary">
+                      <span class="btn-label">Export</span>
+                      <i class="bx bxs-user-plus btn-icon"></i>
+                    </button>
 
                     <button class="btn btn-primary">
                       <span class="btn-label">Apply</span>
@@ -192,6 +188,11 @@
                       </select>
                     </div>
 
+                    <button class="btn btn-secondary">
+                      <span class="btn-label">Export</span>
+                      <i class="bx bxs-user-plus btn-icon"></i>
+                    </button>
+
                     <button class="btn btn-primary">
                       <span class="btn-label">Apply</span>
                       <i class="bx bxs-user-plus btn-icon"></i>
@@ -308,6 +309,11 @@
                         <option value="amount">Amount</option>
                       </select>
                     </div>
+
+                    <button class="btn btn-secondary">
+                      <span class="btn-label">Export</span>
+                      <i class="bx bxs-user-plus btn-icon"></i>
+                    </button>
 
                     <button class="btn btn-primary">
                       <span class="btn-label">Apply</span>
@@ -426,6 +432,11 @@
                       </select>
                     </div>
 
+                    <button class="btn btn-secondary">
+                      <span class="btn-label">Export</span>
+                      <i class="bx bxs-user-plus btn-icon"></i>
+                    </button>
+
                     <button class="btn btn-primary">
                       <span class="btn-label">Apply</span>
                       <i class="bx bxs-user-plus btn-icon"></i>
@@ -543,6 +554,11 @@
                       </select>
                     </div>
 
+                    <button class="btn btn-secondary">
+                      <span class="btn-label">Export</span>
+                      <i class="bx bxs-user-plus btn-icon"></i>
+                    </button>
+
                     <button class="btn btn-primary">
                       <span class="btn-label">Apply</span>
                       <i class="bx bxs-user-plus btn-icon"></i>
@@ -659,6 +675,11 @@
                         <option value="amount">Amount</option>
                       </select>
                     </div>
+
+                    <button class="btn btn-secondary">
+                      <span class="btn-label">Export</span>
+                      <i class="bx bxs-user-plus btn-icon"></i>
+                    </button>
 
                     <button class="btn btn-primary">
                       <span class="btn-label">Apply</span>
