--- a/frontend/pages/branch/index.html
+++ b/frontend/pages/branch/index.html
@@ -102,7 +102,7 @@
       id="page-frame"
       frameborder="0"
       class="frame"
-      src="./activity.html"
+      src="./menu.html"
     ></iframe>
   </body>
 </html>
