--- a/frontend/pages/home/home.html
+++ b/frontend/pages/home/home.html
@@ -11,14 +11,23 @@
   <body class="home">
     <header class="header">
       <div class="context">
-        <h1 class="logo"><a href="./home.html">Jollikod.</a></h1>
+        <h1 class="logo">
+          <a onclick="parent.navigate(event, '../pages/home/home.html')"
+            >Jollikod.</a
+          >
+        </h1>
       </div>
       <div class="actions right">
-        <a href="./login.html" class="btn btn-secondary">
+        <a
+          onclick="parent.navigate(event, '../pages/home/login.html')"
+          class="btn btn-secondary"
+        >
           <span class="btn-label">Log In</span>
           <i class="bx bxs-door-open btn-icon"></i>
         </a>
-        <a href="./register.html" class="btn btn-primary"
+        <a
+          onclick="parent.navigate(event, '../pages/home/register.html')"
+          class="btn btn-primary"
           ><span class="btn-label">Register</span>
           <i class="bx bxs-user-plus btn-icon"></i>
         </a>
